# tarea2PAI

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  funciones.cpp  funciones.h  graph.cpp  graph.h  main  main.cpp  mst.cpp  mst.h  segmentation.cpp  segmentation.h
